bugfix: makes date_metadata_ingested updateable, renames asset_subject